# SAW-ICM20948

./: README.md
PCB_project/BOM/: Bill of Materials-ICM_Board.xlsx
PCB_project/Gerber/: PCB1.3  PCB1.EXTREP  PCB1.G1  PCB1.G2  PCB1.GBL  PCB1.GBO  PCB1.GBP  PCB1.GBS  PCB1.GD1  PCB1.GD2  PCB1.GD3  PCB1.GG1  PCB1.GG2  PCB1.GG3  PCB1.GKO  PCB1.GM13  PCB1.GM15  PCB1.GM16  PCB1.GM2  PCB1.GM20  PCB1.GM21  PCB1.GM3  PCB1.GML  PCB1.GPB  PCB1.GPT  PCB1.GTL  PCB1.GTO  PCB1.GTP  PCB1.GTS  PCB1.REP  PCB1.RUL  PCB1.apr
PCB_project/NC Drill/: PCB1.DRR  PCB1.LDP  PCB1.TX1  PCB1.TX2  PCB1.TXT
PCB_project/Report Board Stack/: PCB1.xls
i2c_version/: CMakeLists.txt  main.cpp
i2c_version/bsp/bsp_interface/include/: bsp.hpp  bsp_led.hpp
i2c_version/bsp/slut-f767zi/: CMakeLists.txt
i2c_version/bsp/slut-f767zi/RTT/src/: SEGGER_RTT_Syscalls_GCC.c
i2c_version/bsp/slut-f767zi/cubeMX/: CMakeLists.txt  cubeMX.ioc
i2c_version/bsp/slut-f767zi/src/: bsp.cpp  bsp_com.cpp
i2c_version/bsp/x86_64/: CMakeLists.txt  toolchain.cmake
i2c_version/bsp/x86_64/src/: bsp.cpp  bsp_clock.cpp  bsp_com.cpp
i2c_version/sensors/icm-20948/: CMakeLists.txt
i2c_version/sensors/icm-20948/include/: icm-20948.hpp
i2c_version/sensors/icm-20948/src/: icm-20948.cpp
i2c_version/sensors/sensor_interface/: CMakeLists.txt
i2c_version/sensors/sensor_interface/include/: sensor_interface.hpp
i2c_version/slutcom/: CMakeLists.txt
i2c_version/slutcom/include/: slutcom_packet.hpp
pc_app/: data_read.py  kalman_filter.py  main.py
spi_version/: cmake-kits.json  main.cpp
spi_version/bsp/bsp_interface/: CMakeLists.txt
spi_version/bsp/bsp_interface/include/: bsp_clock.hpp  bsp_com.hpp
spi_version/bsp/slut-f767zi/: toolchain.cmake
spi_version/bsp/slut-f767zi/RTT/: CMakeLists.txt
spi_version/bsp/slut-f767zi/cubeMX/: CMakeLists.txt  Makefile  Readme.txt  cubeMX.ioc
spi_version/bsp/slut-f767zi/cubeMX/Core/Inc/: main.h  stm32f7xx_hal_conf.h
spi_version/bsp/slut-f767zi/cubeMX/Core/Src/: main.c  stm32f7xx_hal_msp.c
spi_version/bsp/slut-f767zi/cubeMX/Drivers/: .ignore
spi_version/bsp/slut-f767zi/cubeMX/EWARM/: Project.eww  cubeMX.ewd  cubeMX.ewp
spi_version/bsp/slut-f767zi/src/: bsp.cpp  bsp_clock.cpp  bsp_com.cpp  bsp_led.cpp
spi_version/bsp/x86_64/src/: bsp_led.cpp
